--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -155,6 +155,9 @@
   <ItemGroup>
     <None Include="res\shaders\basic.shader" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Settings.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
