--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,8 @@ MigrationBackup/
 *.exe
 *.out
 *.app
+
+
+# ====================================================================================================
+# this is added to make sure the ignore pattern for Release, lib, x32 or x64 dont ignore dependencies
+!dependencies/
