--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="src\maths\Vector4.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shader.cpp" />
+    <ClCompile Include="src\Tests\Test.cpp" />
     <ClCompile Include="src\Tests\TestClearColor.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\vendor\glm\detail\glm.cpp" />
