--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Bounds.cpp" />
+    <ClCompile Include="src\Color.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\Material.cpp" />
     <ClCompile Include="src\maths\Matrix4x4.cpp" />
