--- a/ToyRenderer.vcxproj
+++ b/ToyRenderer.vcxproj
@@ -61,7 +61,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)dependencies\GLFW\lib-vc2017; $(SolutionDir)dependencies\GLEW\lib\Release\Win32;$(SolutionDir)dependencies\GainInput\Release</AdditionalLibraryDirectories>
-      <AdditionalDependencies>gainputstatic.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;glew32s.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;glew32s.lib;xinput.lib;Ws2_32.lib;gainputstatic.lib;glfw3.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -79,7 +79,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)dependencies\GLFW\lib-vc2017; $(SolutionDir)dependencies\GLEW\lib\Release\Win32;$(SolutionDir)dependencies\GainInput\Release</AdditionalLibraryDirectories>
-      <AdditionalDependencies>gainputstatic.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;glew32s.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;glew32s.lib;xinput.lib;Ws2_32.lib;gainputstatic.lib;glfw3.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -88,6 +88,7 @@
     <ClCompile Include="src\Color.cpp" />
     <ClCompile Include="src\Components\Component.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
+    <ClCompile Include="src\InputMaster.cpp" />
     <ClCompile Include="src\Material.cpp" />
     <ClCompile Include="src\maths\Matrix4x4.cpp" />
     <ClCompile Include="src\maths\Vector2.cpp" />
@@ -256,6 +257,7 @@
     <ClInclude Include="src\Color.h" />
     <ClInclude Include="src\Components\Component.h" />
     <ClInclude Include="src\IndexBuffer.h" />
+    <ClInclude Include="src\InputMaster.h" />
     <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\maths\Matrix4x4.h" />
     <ClInclude Include="src\maths\Vector2.h" />
