--- a/ToyRenderer.vcxproj.filters
+++ b/ToyRenderer.vcxproj.filters
@@ -956,6 +956,9 @@
     <ClInclude Include="src\InputMaster.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\InputMapping.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\basic.shader">
